[package]
name = "centipede"
version = "0.2.12"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]

[lib]
crate-type = ["lib"]

[dependencies]
serde_derive = "1.0"
serde = "1.0"
rayon = "1.0.3"
curv = { git = "https://github.com/rjman-ljm/curv", branch = "musig2", default-features=false }
[dependencies.bulletproof]
git = "https://github.com/rjman-ljm/bulletproofs"
branch = "musig2"
default-features = false

[dev-dependencies]
criterion = "0.2"

[features]
default = ["curv/rust-gmp-kzen"]

[[bench]]
name = "v_backup"
path = "benches/v_backup.rs"
harness = false
